[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/font/m6x11.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Gold.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shop/Shop.gd" type="Script" id=3]
[ext_resource path="res://Shop/Upgrades.gd" type="Script" id=4]
[ext_resource path="res://Shop/Skins.gd" type="Script" id=5]
[ext_resource path="res://menu/MenuUtility/MenuButton.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.243137, 0.0862745, 0.0862745, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.458824, 0.215686, 0.215686, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 8.0
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.901961, 0.235294, 0.235294, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 9 )
TabContainer/fonts/font = SubResource( 8 )
TabContainer/styles/panel = SubResource( 2 )
TabContainer/styles/tab_bg = SubResource( 3 )
TabContainer/styles/tab_fg = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.0509804, 0.0509804, 1 )

[node name="header" type="Label" parent="."]
margin_left = 556.0
margin_top = 16.0
margin_right = 732.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "Shop"

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 133.0
theme = SubResource( 5 )

[node name="Upgrades" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 38.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 6 )
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Upgrades"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 10.0
margin_right = -9.0
margin_bottom = -12.0

[node name="control" type="Node2D" parent="TabContainer/Upgrades/RichTextLabel"]

[node name="Strengh" type="Panel" parent="TabContainer/Upgrades/RichTextLabel/control"]
margin_left = 26.0
margin_top = 50.0
margin_right = 333.0
margin_bottom = 357.0

[node name="Sprite" type="Sprite" parent="TabContainer/Upgrades/RichTextLabel/control/Strengh"]

[node name="BuyStrengh" type="Button" parent="TabContainer/Upgrades/RichTextLabel/control/Strengh"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -82.0
margin_right = 76.5
margin_bottom = -43.0
text = "Upgrade"

[node name="LabelTitle" type="Label" parent="TabContainer/Upgrades/RichTextLabel/control/Strengh"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_top = 32.0
margin_right = 49.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 10 )
text = "Strengh"

[node name="StrenghCurrentLevel" type="Label" parent="TabContainer/Upgrades/RichTextLabel/control/Strengh"]
margin_left = 100.0
margin_top = 191.0
margin_right = 205.0
margin_bottom = 205.0
text = "Current Level : 0"

[node name="Defense" type="Panel" parent="TabContainer/Upgrades/RichTextLabel/control"]
margin_left = 364.0
margin_top = 50.0
margin_right = 671.0
margin_bottom = 357.0

[node name="Sprite" type="Sprite" parent="TabContainer/Upgrades/RichTextLabel/control/Defense"]

[node name="BuyDefense" type="Button" parent="TabContainer/Upgrades/RichTextLabel/control/Defense"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -82.0
margin_right = 76.5
margin_bottom = -43.0
text = "Upgrade"

[node name="LabelTitle" type="Label" parent="TabContainer/Upgrades/RichTextLabel/control/Defense"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_top = 32.0
margin_right = 49.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 10 )
text = "Defense"

[node name="DefenseCurrentLevel" type="Label" parent="TabContainer/Upgrades/RichTextLabel/control/Defense"]
margin_left = 100.0
margin_top = 191.0
margin_right = 205.0
margin_bottom = 205.0
text = "Current Level : 0"

[node name="AttackSpeed" type="Panel" parent="TabContainer/Upgrades/RichTextLabel/control"]
margin_left = 706.0
margin_top = 50.0
margin_right = 1013.0
margin_bottom = 357.0

[node name="Sprite" type="Sprite" parent="TabContainer/Upgrades/RichTextLabel/control/AttackSpeed"]

[node name="BuyAttackSpeed" type="Button" parent="TabContainer/Upgrades/RichTextLabel/control/AttackSpeed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -82.0
margin_right = 76.5
margin_bottom = -43.0
text = "Upgrade"

[node name="LabelTitle" type="Label" parent="TabContainer/Upgrades/RichTextLabel/control/AttackSpeed"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.0
margin_top = 32.0
margin_right = 83.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 10 )
text = "Attack Speed"

[node name="AttackSpeedCurrentLevel" type="Label" parent="TabContainer/Upgrades/RichTextLabel/control/AttackSpeed"]
margin_left = 100.0
margin_top = 191.0
margin_right = 205.0
margin_bottom = 205.0
text = "Current Level : 0"

[node name="MaxHealth" type="Panel" parent="TabContainer/Upgrades/RichTextLabel/control"]
margin_left = 1050.0
margin_top = 50.0
margin_right = 1357.0
margin_bottom = 357.0

[node name="Sprite" type="Sprite" parent="TabContainer/Upgrades/RichTextLabel/control/MaxHealth"]

[node name="BuyMaxHealth" type="Button" parent="TabContainer/Upgrades/RichTextLabel/control/MaxHealth"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -82.0
margin_right = 76.5
margin_bottom = -43.0
text = "Upgrade"

[node name="LabelTitle" type="Label" parent="TabContainer/Upgrades/RichTextLabel/control/MaxHealth"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.0
margin_top = 32.0
margin_right = 83.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 10 )
text = "Max Health"

[node name="MaxHealthCurrentLevel" type="Label" parent="TabContainer/Upgrades/RichTextLabel/control/MaxHealth"]
margin_left = 100.0
margin_top = 191.0
margin_right = 205.0
margin_bottom = 205.0
text = "Current Level : 0"

[node name="HScrollBar" type="HScrollBar" parent="TabContainer/Upgrades"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -42.0
max_value = 200.0
page = 30.0

[node name="ColorRect" type="ColorRect" parent="TabContainer/Upgrades"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.5
margin_top = -325.5
margin_right = 376.5
margin_bottom = 129.5
color = Color( 0.172549, 0.152941, 0.152941, 0.913725 )
__meta__ = {
"_editor_description_": ""
}

[node name="Skins" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 34.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 7 )
script = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Skins"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 11.0
margin_right = -9.0
margin_bottom = -11.0

[node name="Gold" parent="." instance=ExtResource( 2 )]
margin_left = 58.0
margin_top = 127.0
margin_right = 98.0
margin_bottom = 155.0

[node name="TextureButton" parent="." instance=ExtResource( 6 )]
margin_top = 591.0
margin_right = 1279.0
margin_bottom = 641.0
text = "Back"

[connection signal="pressed" from="TabContainer/Upgrades/RichTextLabel/control/Strengh/BuyStrengh" to="." method="_on_BuyStrengh_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/RichTextLabel/control/Defense/BuyDefense" to="." method="_on_BuyDefense_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/RichTextLabel/control/AttackSpeed/BuyAttackSpeed" to="." method="_on_BuyAttackSpeed_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/RichTextLabel/control/MaxHealth/BuyMaxHealth" to="." method="_on_BuyMaxHealth_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
